Release 0.10

#6 Service/Module override support

Release 0.9

#4 FactoryConfigurationService - support for loading parameterized types

Release 0.8

#1 Merge bundles and modules into a single concept
#2 Auto-load extensions
#3 Create BootLogger outside DI, add "trace" logging