@@ -9,11 +9,13 @@ import com.nhl.bootique.command.DefaultCommand;
 import com.nhl.bootique.command.FailoverHelpCommand;
 import com.nhl.bootique.command.HelpCommand;
 import com.nhl.bootique.config.CliConfigurationSource;
+import com.nhl.bootique.config.ConfigurationFactory;
 import com.nhl.bootique.config.ConfigurationSource;
+import com.nhl.bootique.config.YamlConfigurationFactory;
 import com.nhl.bootique.env.DefaultEnvironment;
 import com.nhl.bootique.env.Environment;
+import com.nhl.bootique.factory.DelegatingFactoryConfigurationService;
 import com.nhl.bootique.factory.FactoryConfigurationService;
-import com.nhl.bootique.factory.YamlFactoryConfigurationService;
 import com.nhl.bootique.jackson.DefaultJacksonService;
 import com.nhl.bootique.jackson.JacksonService;
 import com.nhl.bootique.jopt.Args;
@@ -42,7 +44,10 @@ public class BQCoreModule implements Module {
 		binder.bind(Runner.class).to(DefaultRunner.class).in(Singleton.class);
 		binder.bind(Options.class).toProvider(OptionsProvider.class).in(Singleton.class);
 		binder.bind(ConfigurationSource.class).to(CliConfigurationSource.class).in(Singleton.class);
-		binder.bind(FactoryConfigurationService.class).to(YamlFactoryConfigurationService.class);
+
+		binder.bind(ConfigurationFactory.class).to(YamlConfigurationFactory.class).in(Singleton.class);
+		binder.bind(FactoryConfigurationService.class).to(DelegatingFactoryConfigurationService.class);
+
 		binder.bind(Environment.class).to(DefaultEnvironment.class);
 
 		binder.bind(Command.class).annotatedWith(DefaultCommand.class).to(FailoverHelpCommand.class)
