@@ -1,4 +1,4 @@
-package com.nhl.bootique.factory;
+package com.nhl.bootique.config;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
@@ -10,9 +10,9 @@ import org.junit.Test;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.nhl.bootique.factory.YamlFactoryConfigurationService;
+import com.nhl.bootique.config.YamlConfigurationFactory;
 
-public class YamlFactoryConfigurationServiceStaticsTest {
+public class YamlConfigurationFactory_StaticsTest {
 
 	@Test
 	public void testReadYaml() {
@@ -20,7 +20,7 @@ public class YamlFactoryConfigurationServiceStaticsTest {
 		InputStream in = new ByteArrayInputStream("a: b\nb: c".getBytes());
 		ObjectMapper mapper = new ObjectMapper();
 
-		JsonNode node = YamlFactoryConfigurationService.readYaml(in, mapper);
+		JsonNode node = YamlConfigurationFactory.readYaml(in, mapper);
 		assertNotNull(node);
 
 		assertEquals("b", node.get("a").asText());
