@@ -1,5 +1,6 @@
 Release 0.10
 
+#5 FactoryConfigurationService refactoring
 #6 Service/Module override support
 
 Release 0.9
